--- a/day9-project/index.html
+++ b/day9-project/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Levaku Sai Manas Reddy — Portfolio</title>
 
+<script src="../day9-project/app.js"></script>
   <!-- Google Fonts -->
+   <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 
   <!-- Icon -->
@@ -14,7 +16,6 @@
   <!-- Three.js for the deep interactive background -->
   <script src="https://unpkg.com/three@0.154.0/build/three.min.js"></script>
   <script src="https://unpkg.com/three@0.154.0/examples/js/controls/OrbitControls.js"></script>
-
   <!-- GSAP for buttery animations -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 
